[package]
name = "router-monitor"
version = "1.5.0"
edition = "2021"
description = "Monitor home router and Internet connectivity and write ping measurements to CSV."
license = "MIT"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
